# DeepX

./: &1  .gitignore  CHANGELOG_0.7.2.md  Cargo.toml  PLAN.md  README.md  bing_sample.html  bug.md  clippy_output.txt  convert_tools.py  debug.md  deepx-arch-SKILL.md  dev-issues.md  dev.md  err.txt  fix-bugs.md  justfile  migration-report.md  next-dev.md  next-dev2.md  next_step.md  next_step_2.md  notes.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.example.json  sed_test.txt.1781430691  sed_test.txt.1781430714  sed_test.txt.1781430871  sed_test.txt.1781431035  sed_test.txt.1781431416  stats_ctx.py  temp_all_defs.txt  temp_convert.py  temp_fix.txt  temp_patch.py  temp_patch2.py  temp_patch3.py  test_dsml.py  (+3 more)
apps/installer/: .gitignore  Cargo.toml  README.md  justfile
apps/installer/payload/config/: default.toml
apps/installer/scripts/: clean.ps1  collect-payload.ps1  finalize.ps1  status.ps1
apps/installer/src/: install.rs  main.rs  win_process.rs
crates/context7-cli/: Cargo.toml
crates/context7-cli/src/: main.rs
crates/deepx/: Cargo.toml  build.rs
crates/deepx-client/: Cargo.toml
crates/deepx-client/examples/: canonical_snapshot_probe.rs  daemon_probe.rs  disconnect_probe.rs  lease_probe.rs  protocol_probe.rs
crates/deepx-client/src/: lib.rs
crates/deepx-companion/: Cargo.toml
crates/deepx-companion/src/: bridge.rs  hub.rs  interaction.rs  journal.rs  lib.rs  secret.rs  supervisor.rs  visual.rs
crates/deepx-config/: Cargo.toml
crates/deepx-config/prompts/: backend_prompt.md  os_env.md  protocol.md  role.md  rules.md  session.md  think_max.md
crates/deepx-config/src/: config.rs  config_db.rs  lib.rs  prompt.rs  registry.rs
crates/deepx-daemon/: Cargo.toml  build.rs
crates/deepx-daemon/src/: frontend.rs  lib.rs  main.rs  main_loop.rs  pool.rs  server.rs  transport.rs
crates/deepx-egui-exp1/: Cargo.toml
crates/deepx-egui-exp1/src/: agent.rs  app.rs  bench.rs  chat.rs  infobar.rs  main.rs  settings.rs  sidebar.rs  status.rs  theme.rs
crates/deepx-gate/: Cargo.toml
crates/deepx-gate-testui/: Cargo.toml
crates/deepx-gate-testui/src/: main.rs
crates/deepx-gate/src/: guard.rs  lib.rs  openai.rs  tool_parser.rs  types.rs
crates/deepx-gate/tests/: gate_test.rs
crates/deepx-gate/tests/common/: mock_server.rs
crates/deepx-message/: Cargo.toml
crates/deepx-message/src/: effect.rs  lib.rs  store.rs  store.rs.tmp
crates/deepx-msglp/: Cargo.toml
crates/deepx-msglp/src/: agent.rs  compact.rs  conflict.rs  dashboard.rs  lib.rs  lifecycle.rs  logger.rs  notification.rs  permission.rs  skill_context.rs  toast_com.rs  tool_exec.rs  turn.rs  util.rs
crates/deepx-msglp/src/new/: DESIGN.md  engine.rs  engine_compact.rs  engine_input.rs  engine_misc.rs  loop_core.rs  (+6 more)
crates/deepx-msglp/tests/: ask_user_lifecycle.rs  concurrent_read_stress.rs  permission_lifecycle.rs
crates/deepx-proto/: Cargo.toml
crates/deepx-proto/src/: agent_protocol.rs  companion.rs  control.rs  lib.rs
crates/deepx-runtime/: Cargo.toml
crates/deepx-runtime/src/: activity.rs  event_bus.rs  lease.rs  lib.rs  logger.rs  registry.rs  service.rs  worker.rs
crates/deepx-sed/: Cargo.toml  Cross.toml
crates/deepx-sed/scripts/: fetch_gnused_tests.sh
crates/deepx-sed/src/: cli.rs.1782046405  constants.rs  errors.rs  lib.rs  main.rs.1782046405  mbcs.rs  parser.rs  selinux.rs  validation.rs
crates/deepx-sed/tests/: engine_inplace.rs  engine_smoke.rs  obinary_windows.rs  sed_compat.rs  smoke.rs
crates/deepx-session/: Cargo.toml
crates/deepx-session/src/: lib.rs  manager.rs  memory_hook.rs  migrate.rs  mirror.rs  session_meta.rs  store.rs
crates/deepx-skills/: Cargo.toml  DESIGN.md
crates/deepx-skills/src/: lib.rs
crates/deepx-subagent/: Cargo.toml
crates/deepx-subagent/src/: lib.rs
crates/deepx-terminal/: Cargo.toml
crates/deepx-terminal/src/: main.rs
crates/deepx-terminalui/: Cargo.toml  prepend_turns.rs.1781752415.1782387240
crates/deepx-terminalui/src/: chat_new.rs  events.rs  i18n.rs  lib.rs  markdown.rs  theme.rs
crates/deepx-tools/: Cargo.toml
crates/deepx-tools/src/: agentfs_bridge.rs  ask_user.rs  audit.rs  auth.rs  authorization.rs  bridge.rs  code_delta.rs  context7.rs  exec.rs  execution.rs  explore.rs  file_cache.rs  file_delete.rs  file_diff.rs  file_edit.rs  file_edit_diff.rs  file_glob.rs  file_glob.rs.1782784160  file_list_dir.rs  file_move.rs  file_mutate.rs  file_query.rs  file_read.rs  file_search.rs  file_shared.rs  file_state.rs  file_write.rs  git.rs  git_tool.rs  grep.rs  grep.rs.1782783951  grep.rs.bak  jaq.rs  jaq.rs.1782783951  lib.rs  linuxmod.rs  main.rs  manager.rs  mcp_bridge.rs  mcp_bridge.rs.1782801159  (+26 more)
crates/deepx-tools/tests/: cjk_integration.rs  concurrent_read.rs
crates/deepx-tui/: Cargo.toml
crates/deepx-tui/src/: app.rs  i18n.rs  lib.rs  markdown.rs  ui.rs
crates/deepx-types/: Cargo.toml
crates/deepx-types/src/: api_types.rs  arg.rs  config.rs  lib.rs  message.rs  platform.rs  provider.rs  session.rs  state.rs  token.rs  tool_def.rs
crates/deepx-vector/: Cargo.toml  DESIGN.md
crates/deepx-vector/examples/: test_vulkan.rs
crates/deepx-vector/src/: bm25.rs  candle.rs  chunk.rs  degradation.rs  embedder.rs  engine.rs  error.rs  lib.rs  memory.rs  qwen3_embedding.rs  reranker.rs  reranker_candle.rs  store.rs  vulkan_embedder.rs
crates/deepx/src/: main.rs
crates/dsx-agent/: Cargo.toml
crates/dsx-agent/src/: agent.rs  api.rs  assembly.rs  cache_analyzer.rs  config.rs  dsc_log.rs  dsx_log.rs  gate.rs  health.rs  hp.rs  lib.rs  main.rs  prompt.rs  router.rs  runner.rs  skills.rs  tokenizer.rs  tool_parser.rs  tools.rs  tools.rs.bak  tools_spawn.rs  tui.rs
crates/dsx-axum/: Cargo.toml
crates/dsx-axum/src/: main.rs
crates/dsx-gate/: Cargo.toml
crates/dsx-gate/src/: lib.rs  openai_api.rs  runner.rs  types.rs
crates/dsx-gateway/: Cargo.toml
crates/dsx-gateway/src/: anthropic.rs  lib.rs  openai.rs
crates/dsx-hp/: Cargo.toml
crates/dsx-hp/src/: anthropic_api.rs  config.rs  emotion.rs  ipc_traits.rs  lib.rs  liveness.rs  main.rs  openai_api.rs  registry.rs  runner.rs  types.rs
(+564 files in other folders)
