[workspace]
resolver = "2"
members = [
    "crates/deepx-gate",
    "crates/deepx-config",
    "crates/deepx-skills",
    "crates/deepx-msglp",
    "crates/deepx-message",
    "crates/deepx-types",
    "crates/deepx-proto",
    "crates/deepx-companion",
    "crates/deepx-tools",
    "crates/deepx-session",
    "crates/deepx-subagent",
    "crates/deepx-tauri/src-tauri",
    "crates/deepx-gate-testui",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[workspace.lints.clippy]
unwrap_used = "deny"
string_slice = "deny"

