[package]
name = "deepx-installer"
version.workspace = true
edition = "2021"
license.workspace = true
description = "DeepX 桌面应用安装程序"

[[bin]]
name = "DeepXInstaller"
path = "src/main.rs"

[[bin]]
name = "deepx-uninstaller"
path = "src/bin/uninstall.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"

windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }

dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
zip = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
