[package]
name = "deepx-client"
version.workspace = true
edition.workspace = true
description = "Reusable DeepX daemon client for Desktop and TUI"

[dependencies]
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
futures-util = "0.3"
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"

[lints]
workspace = true
