[package]
name = "deepx-companion"
version.workspace = true
edition.workspace = true
description = "DeepX desktop companion protocol state and transport"

[dependencies]
deepx-proto = { path = "../deepx-proto" }
futures-util = "0.3"
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"

[lints]
workspace = true
