[package]
name = "deepx-config"
version.workspace = true
edition.workspace = true
description = "DeepX configuration: provider registry, prompts, config load/save"

[dependencies]
dsx-types = { path = "../dsx-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
log = "0.4"

[lints]
workspace = true
