[package]
name = "deepx-config"
version.workspace = true
edition.workspace = true
description = "DeepX configuration: provider registry, prompts, config load/save"

[dependencies]
deepx-types = { path = "../deepx-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
[lints]
workspace = true
