[package]
name = "deepx-config"
version.workspace = true
edition.workspace = true
description = "DeepX configuration: provider registry, prompts, config load/save"

[features]
default = ["turso-backend"]
turso-backend = ["dep:turso", "dep:tokio"]

[dependencies]
deepx-types = { path = "../deepx-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
log = "0.4"
turso = { version = "0.7.0-pre.17", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
[lints]
workspace = true
