[package]
name = "deepx-daemon"
version.workspace = true
edition.workspace = true
description = "DeepX daemon — manages agent process pool and socket IPC"

[[bin]]
name = "deepxd"
path = "src/main.rs"

[dependencies]
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
deepx-session = { path = "../deepx-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Foundation"] }

[lints]
workspace = true
