[package]
name = "deepx-daemon"
version.workspace = true
edition.workspace = true
description = "Headless DeepX application daemon"

[dependencies]
deepx-proto = { path = "../deepx-proto" }
deepx-runtime = { path = "../deepx-runtime" }
deepx-types = { path = "../deepx-types" }
futures-util = "0.3"
log = "0.4"
rand = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"

[lints]
workspace = true
