[package]
name = "deepx-egui-exp1"
version.workspace = true
edition.workspace = true
description = "DeepX egui native rendering experiment"

[[bin]]
name = "deepx-egui-exp1"
path = "src/main.rs"

[dependencies]
eframe = { path = "D:/project/egui/crates/eframe", default-features = false, features = ["wgpu"] }
egui = { path = "D:/project/egui/crates/egui" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
deepx-session = { path = "../deepx-session" }
deepx-config = { path = "../deepx-config" }
serde_json = "1"
egui_commonmark = { path = "D:/project/egui_commonmark/egui_commonmark" }
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
