[package]
name = "deepx-gate-testui"
version.workspace = true
edition.workspace = true
description = "Interactive web UI for testing the DeepX gate with a mock OpenAI API"

[dependencies]
deepx-gate = { path = "../deepx-gate" }
deepx-types = { path = "../deepx-types" }
serde_json = "1"
tiny_http = "0.12"

[lints.clippy]
unwrap_used = "deny"
string_slice = "allow"
