[package]
name = "deepx-gate"
version.workspace = true
edition.workspace = true
description = "DeepX LLM API gateway — HTTP streaming, message conversion"

[dependencies]
deepx-types = { path = "../deepx-types" }
deepx-config = { path = "../deepx-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
anyhow = "1"
log = "0.4"

[lints.clippy]
unwrap_used = "deny"
# All string slices in this crate use indices from find() on ASCII patterns
# (<, >, \n, "data: ", etc.), always on UTF-8 character boundaries.
string_slice = "allow"
