[package]
name = "deepx-message"
version.workspace = true
edition.workspace = true
description = "DeepX message store with state-machine lifecycle"

[dependencies]
deepx-types = { path = "../deepx-types" }
deepx-proto = { path = "../deepx-proto" }
deepx-session = { path = "../deepx-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[lints]
workspace = true
