[package]
name = "deepx-msglp"
version.workspace = true
edition.workspace = true
description = "DSX minimal message loop driver"

[dependencies]
deepx-gate = { path = "../deepx-gate" }
deepx-config = { path = "../deepx-config" }
deepx-session = { path = "../deepx-session" }
deepx-message = { path = "../deepx-message" }
deepx-tools = { path = "../deepx-tools" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
serde_json = "1"
log = "0.4"

[lints]
workspace = true
