[package]
name = "deepx-msglp"
version.workspace = true
edition.workspace = true
description = "DeepX minimal message loop driver"

[dependencies]
deepx-gate = { path = "../deepx-gate" }
deepx-config = { path = "../deepx-config" }
deepx-session = { path = "../deepx-session" }
deepx-message = { path = "../deepx-message" }
deepx-tools = { path = "../deepx-tools" }
deepx-subagent = { path = "../deepx-subagent" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
serde_json = "1"
log = { version = "0.4", features = ["std"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Registry", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "UI_Notifications", "Data_Xml_Dom", "Foundation_Collections"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
os_pipe = "1"
