[package]
name = "deepx-proto"
version.workspace = true
edition.workspace = true
description = "DeepX IPC message protocol definitions"

[dependencies]
deepx-types = { path = "../deepx-types" }
ts-rs = { version = "12", features = ["serde-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
