[package]
name = "deepx-sed"
version.workspace = true
edition = "2021"
description = "Rust sed library — adapted from red-sed for DeepX"
license = "MIT"

[lib]
name = "deepx_sed"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
encoding_rs = "0.8"
rustc-hash = "2.0"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
selinux = { version = "0.5", optional = true }
selinux-sys = { version = "0.6", optional = true }

[features]
default = []
selinux = ["dep:selinux", "dep:selinux-sys"]

[lints]
workspace = true
