[package]
name = "deepx-session"
version.workspace = true
edition.workspace = true
description = "DeepX session manager — singleton, list/load/save/active"

[dependencies]
deepx-types = { path = "../deepx-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
log = "0.4"

[lints]
workspace = true
