[package]
name = "deepx-session"
version.workspace = true
edition.workspace = true
description = "DeepX session manager — singleton, list/load/save/active"

[features]
default = ["turso-backend"]
turso-backend = ["dep:turso", "dep:tokio"]

[dependencies]
deepx-types = { path = "../deepx-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
turso = { version = "0.7.0-pre.17", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[lints.clippy]
unwrap_used = "deny"
# Safe: only 2 string slices — one uses is_char_boundary, one is data eof check.
string_slice = "allow"
