[package]
name = "deepx-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deepx-vector = { path = "../deepx-vector", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
walkdir = "2"

[features]
rag = ["dep:deepx-vector"]

[lints]
workspace = true
