[package]
name = "deepx-subagent"
version.workspace = true
edition.workspace = true
description = "DeepX subagent tool — spawn sub-agents for focused tasks"

[dependencies]
deepx-tools = { path = "../deepx-tools" }
deepx-types = { path = "../deepx-types" }
deepx-session = { path = "../deepx-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[lints]
workspace = true
