[package]
name = "deepx-terminalui"
version.workspace = true
edition.workspace = true
description = "DeepX terminal user interface"

[lib]
name = "deepx_terminalui"
path = "src/lib.rs"

[dependencies]
deepx-types = { path = "../deepx-types" }
deepx-proto = { path = "../deepx-proto" }
deepx-daemon = { path = "../deepx-daemon" }
deepx-config = { path = "../deepx-config" }
deepx-session = { path = "../deepx-session" }
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
unicode-width = "0.2"
chrono = { version = "0.4", features = ["clock"] }
syntect = "5"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

[lints]
workspace = true
