[package]
name = "deepx-tools"
version.workspace = true
edition.workspace = true
description = "DeepX tool execution — library + standalone binary"

[[bin]]
name = "deepx-tools"
path = "src/main.rs"

[dependencies]
deepx-message = { path = "../deepx-message" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
deepx-sed = { path = "../deepx-sed" }
grep-matcher = { path = "../deepx-grep-matcher" }
grep-regex = { path = "../deepx-grep-regex" }
grep-searcher = { path = "../deepx-grep-searcher" }
ignore = { path = "../deepx-ignore" }
similar = { version = "2", features = ["text"] }
jaq-core = "3"
jaq-std = "3"
jaq-json = { version = "2", features = ["serde"] }
shell-words = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = { version = "3", features = ["json"] }
html2text = "0.17"
log = "0.4"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[lints]
workspace = true
