[package]
name = "deepx-tools"
version.workspace = true
edition.workspace = true
description = "DeepX tool execution — library + standalone binary"

[[bin]]
name = "deepx-tools"
path = "src/main.rs"

[dependencies]
deepx-message = { path = "../deepx-message" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
similar = { version = "2", features = ["text"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = { version = "3", features = ["json"] }
html2text = "0.17"
log = "0.4"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"
windows-sys = { version = "0.59", features = ["Win32_System_Registry"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[lints]
workspace = true
