[package]
name = "deepx-tools"
version.workspace = true
edition.workspace = true
description = "DeepX tool execution — library + standalone binary"

[[bin]]
name = "deepx-tools"
path = "src/main.rs"

[dependencies]
deepx-message = { path = "../deepx-message" }
deepx-skills = { path = "../deepx-skills" }
deepx-proto = { path = "../deepx-proto" }
deepx-types = { path = "../deepx-types" }
similar = { version = "2", features = ["text"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = { version = "3", features = ["json"] }
html2text = "0.17"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["clock"] }
git2 = { version = "0.21", features = ["vendored-libgit2"] }
# agentfs-sdk = { version = "0.6", optional = true }  # deferred — needs turso v0.4, conflicts with v0.7
# tokio = { version = "1", features = ["rt"], optional = true }

# [features]
# agentfs = ["dep:agentfs-sdk", "dep:tokio"]

[features]
agentfs = []

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
