[package]
name = "deepx-tui"
version.workspace = true
edition.workspace = true
description = "DeepX terminal user interface"

[lib]
name = "deepx_tui"
path = "src/lib.rs"

[dependencies]
deepx-types = { path = "../deepx-types" }
deepx-proto = { path = "../deepx-proto" }
deepx-config = { path = "../deepx-config" }
deepx-session = { path = "../deepx-session" }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["bracketed-paste"] }
serde = "1"
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = { version = "3", features = ["json"] }
unicode-width = "0.2"
chrono = { version = "0.4", features = ["clock"] }
syntect = "5"

[lints]
workspace = true
