[package]
name = "deepx-types"
version.workspace = true
edition.workspace = true
description = "DeepX shared type definitions"

[dependencies]
ts-rs = { version = "12", features = ["serde-compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[lints]
workspace = true
