[package]
name = "deepx"
version.workspace = true
edition.workspace = true

[dependencies]
deepx-types = { path = "../deepx-types" }
deepx-tui = { path = "../deepx-tui" }
deepx-config = { path = "../deepx-config" }
deepx-session = { path = "../deepx-session" }
deepx-msglp = { path = "../deepx-msglp" }
deepx-tauri = { path = "../deepx-tauri/src-tauri" }

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
