[package]
name = "dsx-agent"
version.workspace = true
edition.workspace = true
description = "DSX agent core — orchestrator, memory, session, context"

[dependencies]
dsx-types = { path = "../dsx-types" }
dsx-proto = { path = "../dsx-proto" }
dsx-tools = { path = "../dsx-tools" }
ratatui = "0.30"
crossterm = "0.29"
tui-textarea-2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.23"
log = "0.4"
simplelog = "0.12"
anyhow = "1"
limner = "0.3"
syntect = { version = "5", default-features = false, features = ["default-onig"] }
nucleo = "0.5"
