[package]
name = "dsx-agent"
version.workspace = true
edition.workspace = true
description = "DSX agent core — orchestrator, memory, session, context"

[dependencies]
dsx-types = { path = "../dsx-types" }
dsx-proto = { path = "../dsx-proto" }
dsx-session = { path = "../dsx-session" }
dsx-tools = { path = "../dsx-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
simplelog = "0.12"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
ureq = { version = "2", features = ["json", "tls"] }

[lints]
workspace = true
