[package]
name = "dsx-gateway"
version.workspace = true
edition.workspace = true
description = "API protocol translation library (Anthropic + OpenAI SSE streaming)"

[dependencies]
dsx-types = { path = "../dsx-types" }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
anyhow = "1"
log = "0.4"
